...
    </fragment>

    <!-- Level Selection Fragment -->
    <fragment
        android:id="@+id/levelSelectionFragment"
        android:name="roboyard.ui.fragments.LevelSelectionFragment"
        android:label="Level Selection"
        tools:layout="@layout/fragment_level_selection">
        <action
            android:id="@+id/actionLevelSelectionToMainMenu"
            app:destination="@id/mainMenuFragment"
            app:popUpTo="@id/mainMenuFragment"
            app:popUpToInclusive="true" />
...
